upgrade to grails 2.5